--- a/AlphaApi/AlphaApi/Web.config
+++ b/AlphaApi/AlphaApi/Web.config
@@ -9,9 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AlphaApi-20170112105535.mdf;Initial Catalog=aspnet-AlphaApi-20170112105535;Integrated Security=True"
-      providerName="System.Data.SqlClient" />-->
-  <add name="mycon" connectionString="Server=.;database=Alpha;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="mycon" connectionString="Data Source=mssql-2012.chaiyohosting.com\MSSQLSERVER,1433;Initial Catalog=Alpha;User ID=sa4;Password=weng4525017#" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
