--- a/Alpha/AlphaMvc/packages.config
+++ b/Alpha/AlphaMvc/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.Web.Optimization" version="0.1" />
   <package id="MicrosoftWebInfrastructure" version="1.0.0.0" />
   <package id="Modernizr" version="2.0.6" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net40" />
   <package id="numberformatter.jquery" version="1.2.4" targetFramework="net40" />
   <package id="System.Web.Providers" version="1.0.1" />
 </packages>
