--- a/Alpha/AlphaMvc/Alpha.csproj
+++ b/Alpha/AlphaMvc/Alpha.csproj
@@ -49,6 +49,7 @@
       <HintPath>..\packages\EntityFramework.4.1.10331.0\lib\net40\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.ReportViewer.WebForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\MicrosoftWebInfrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
@@ -56,10 +57,17 @@
     <Reference Include="Microsoft.Web.Optimization">
       <HintPath>..\packages\Microsoft.Web.Optimization.0.1\lib\net40\Microsoft.Web.Optimization.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5.2\System.Net.Http.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -105,11 +113,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AuthorizationController.cs" />
     <Compile Include="Controllers\BorrowController.cs" />
-    <Compile Include="Controllers\BreakDownCostController.cs" />
+    <Compile Include="Controllers\BDCController.cs" />
     <Compile Include="Controllers\CalendarJobController.cs" />
     <Compile Include="Controllers\CalendarManPowerController.cs" />
-    <Compile Include="Controllers\EmployeeController.cs" />
+    <Compile Include="Controllers\RoleMasterController.cs" />
+    <Compile Include="Controllers\RptJobOrderController.cs" />
+    <Compile Include="Controllers\TechnicianController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\JobOrderController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
@@ -121,18 +132,36 @@
     <Compile Include="Controllers\WageVendorController.cs" />
     <Compile Include="Controllers\WarningSupportController.cs" />
     <Compile Include="DataAccessLayer\DBdata.cs" />
+    <Compile Include="Reports\DS\dsJobOrder.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dsJobOrder.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
-    <Compile Include="Models\BDC.cs" />
-    <Compile Include="Models\EmployeeModels.cs" />
-    <Compile Include="Models\IncomeMaster.cs" />
-    <Compile Include="Models\ExpenseMaster.cs" />
-    <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\BDCModels.cs" />
+    <Compile Include="Models\TechnicianCardModels.cs" />
+    <Compile Include="Models\TechnicianFileModels.cs" />
+    <Compile Include="Models\TechnicianModels.cs" />
+    <Compile Include="Models\IncomeMasterModels.cs" />
+    <Compile Include="Models\ExpenseMasterModels.cs" />
+    <Compile Include="Models\JobOrderModels.cs" />
+    <Compile Include="Models\ProductModels.cs" />
+    <Compile Include="Models\TechnicianSkillModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\FormReport\RptReportViewer.aspx.cs">
+      <DependentUpon>RptReportViewer.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reports\FormReport\RptReportViewer.aspx.designer.cs">
+      <DependentUpon>RptReportViewer.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ConfirmDialog.html" />
+    <Content Include="Content\custom.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\calendar\clnda.css" />
@@ -141,24 +170,37 @@
     <Content Include="Content\calendar\fullcalendar.print.css" />
     <Content Include="Content\calendar\fullcalendar.print.min.css" />
     <Content Include="Content\cupertino\jquery-ui.min.css" />
-    <Content Include="Content\dataTables.jqueryui.min.css" />
+    <Content Include="Content\datepicker\cangas.datepicker.css" />
+    <Content Include="Content\datepicker\latoja.datepicker.css" />
+    <Content Include="Content\datepicker\lugo.datepicker.css" />
+    <Content Include="Content\datepicker\melon.datepicker.css" />
+    <Content Include="Content\datepicker\nigran.datepicker.css" />
+    <Content Include="Content\datepicker\santiago.datepicker.css" />
+    <Content Include="Content\datepicker\siena.datepicker.css" />
+    <Content Include="Content\datepicker\vigo.datepicker.css" />
     <Content Include="Content\Dialog\dialogstyle.css" />
-    <Content Include="Content\editable\tablestyle.css" />
+    <Content Include="Content\editable\popupgrid.css" />
+    <Content Include="Content\editable\addrowstyle.css" />
     <Content Include="Content\Grid\buttons.jqueryui.css" />
     <Content Include="Content\Grid\semantic.css" />
     <Content Include="Content\Grid\semantic.min.css" />
-    <Content Include="Content\hidegrid.css" />
+    <Content Include="Content\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Content\images\ui-bg_glass_25_e1f0f5_1x400.png" />
+    <Content Include="Content\images\ui-bg_glass_55_444444_1x400.png" />
+    <Content Include="Content\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Content\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Content\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Content\images\ui-bg_inset-soft_95_fef1ec_1x100.png" />
+    <Content Include="Content\images\ui-icons_222222_256x240.png" />
+    <Content Include="Content\images\ui-icons_309bbf_256x240.png" />
+    <Content Include="Content\images\ui-icons_454545_256x240.png" />
+    <Content Include="Content\images\ui-icons_bf3030_256x240.png" />
+    <Content Include="Content\images\ui-icons_ffffff_256x240.png" />
     <Content Include="Content\jquery-ui.css" />
-    <Content Include="Content\jquery.dataTables_themeroller.css" />
-    <Content Include="Content\jquery.dataTables.css" />
-    <Content Include="Content\demo_table_jui.css" />
-    <Content Include="Content\demo_table.css" />
-    <Content Include="Content\demo_page.css" />
     <Content Include="Content\LoginStyle.css" />
     <Content Include="Content\menu.css" />
     <Content Include="Content\menu\slimmenu.min.css" />
     <Content Include="Content\Style.css" />
-    <Content Include="Content\table\jquery-ui.css" />
     <Content Include="Content\Tab\easy-responsive-tabs.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
@@ -200,20 +242,75 @@
     <Content Include="Images\Logo.png" />
     <Content Include="Images\remove.png" />
     <Content Include="Images\search-engine.png" />
+    <Content Include="Images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Images\ui-icons_222222_256x240.png" />
     <Content Include="Images\user-black-close-up-shape.png" />
+    <Content Include="Reports\FormReport\RptReportViewer.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\timepicker\fontello.eot" />
     <Content Include="Content\timepicker\fontello.svg" />
     <Content Include="Content\timepicker\fontello.ttf" />
     <Content Include="Content\timepicker\fontello.woff" />
+    <Content Include="Reports\DS\dsJobOrder.xsc">
+      <DependentUpon>dsJobOrder.xsd</DependentUpon>
+    </Content>
+    <None Include="Reports\DS\dsJobOrder.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>dsJobOrder.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <Content Include="Reports\DS\dsJobOrder.xss">
+      <DependentUpon>dsJobOrder.xsd</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\calendar\fullcalendar.js" />
     <Content Include="Scripts\calendar\fullcalendar.min.js" />
     <Content Include="Scripts\calendar\gcal.js" />
     <Content Include="Scripts\calendar\gcal.min.js" />
     <Content Include="Content\editable\datagrid.css" />
+    <Content Include="Scripts\ConfirmDialog\ConfirmDialog.js" />
+    <Content Include="Scripts\CUDS\Authorization\EditAuthorization.js" />
+    <Content Include="Scripts\CUDS\Authorization\CreateAuthorization.js" />
+    <Content Include="Scripts\CUDS\Authorization\IndexAuthorization.js" />
+    <Content Include="Scripts\CUDS\BDC\CreateBDC.js" />
+    <Content Include="Scripts\CUDS\BDC\EditBDC.js" />
+    <Content Include="Scripts\CUDS\BDC\IndexBDC.js" />
+    <Content Include="Scripts\CUDS\BDC\BDCJob.js" />
+    <Content Include="Scripts\CUDS\CalendarManPower\IndexCalendarManPower.js" />
+    <Content Include="Scripts\CUDS\ExpenseMaster\CreateExpenseMaster.js" />
+    <Content Include="Scripts\CUDS\ExpenseMaster\EditExpenseMaster.js" />
+    <Content Include="Scripts\CUDS\ExpenseMaster\IndexExpenseMaster.js" />
+    <Content Include="Scripts\CUDS\IncomeMaster\EditIncomeMaster.js" />
+    <Content Include="Scripts\CUDS\IncomeMaster\CreateIncomeMaster.js" />
+    <Content Include="Scripts\CUDS\IncomeMaster\IndexIncomeMaster.js" />
+    <Content Include="Scripts\CUDS\JobOrderBorrow\CreateJobOrderBorrow.js" />
+    <Content Include="Scripts\CUDS\JobOrderBorrow\EditJobOrderBorrow.js" />
+    <Content Include="Scripts\CUDS\JobOrderBorrow\IndexJobOrderBorrow.js" />
+    <Content Include="Scripts\CUDS\JobOrder\CreateJobOrder.js" />
+    <Content Include="Scripts\CUDS\JobOrder\EditJobOrder.js" />
+    <Content Include="Scripts\CUDS\JobOrder\IndexJobOrder.js" />
+    <Content Include="Scripts\CUDS\Products\CreateProducts.js" />
+    <Content Include="Scripts\CUDS\Products\EditProducts.js" />
+    <Content Include="Scripts\CUDS\Products\IndexProducts.js" />
+    <Content Include="Scripts\CUDS\RoleMaster\EditRoleMaster.js" />
+    <Content Include="Scripts\CUDS\RoleMaster\IndexRoleMaster.js" />
+    <Content Include="Scripts\CUDS\Technician\TechnicianFile.js" />
+    <Content Include="Scripts\CUDS\Technician\TechnicianSkill.js" />
+    <Content Include="Scripts\CUDS\Technician\TechnicianCard.js" />
+    <Content Include="Scripts\CUDS\Technician\EditTechnician.js" />
+    <Content Include="Scripts\CUDS\Technician\IndexTechnician.js" />
+    <Content Include="Scripts\CUDS\UserLogin\IndexUserLogin.js" />
+    <Content Include="Scripts\EditableGrid\highlight.min.js" />
+    <Content Include="Scripts\EditableGrid\Pager.js" />
     <Content Include="Scripts\EditableGrid\paging.js" />
+    <None Include="Scripts\jquery-1.7.1-vsdoc.js" />
+    <Content Include="Scripts\jquery-1.7.1.js" />
+    <Content Include="Scripts\jquery-1.7.1.min.js" />
+    <Content Include="Scripts\jquery.numberformatter-1.2.4.js" />
+    <Content Include="Scripts\jshashtable-3.0.js" />
     <Content Include="Scripts\lib\jquery-ui.min.js" />
     <Content Include="Scripts\lib\jquery.min.js" />
     <Content Include="Scripts\calendar\locale-all.js" />
@@ -229,9 +326,6 @@
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\jquery.dataTables.min.js" />
     <Content Include="Scripts\jquery-1.12.4.js" />
-    <Content Include="Scripts\jquery-1.6.2-vsdoc.js" />
-    <Content Include="Scripts\jquery-1.6.2.js" />
-    <Content Include="Scripts\jquery-1.6.2.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.min.js" />
     <Content Include="Scripts\jquery.mobilemenu.js" />
@@ -247,6 +341,8 @@
     <Content Include="Scripts\knockout-1.3.0beta.js" />
     <Content Include="Scripts\modernizr-2.0.6-development-only.js" />
     <Content Include="Scripts\grid.js" />
+    <Content Include="Scripts\NumberFormat\jquery.number.js" />
+    <Content Include="Scripts\NumberFormat\jquery.number.min.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\src\gulpfile.js" />
@@ -288,59 +384,73 @@
     <Content Include="Views\Shared\_LogOnPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
-    <Content Include="Views\Products\Create.cshtml" />
-    <Content Include="Views\Products\Edit.cshtml" />
-    <Content Include="Views\JobOrder\Edit.cshtml" />
-    <Content Include="Views\WageVendor\Edit.cshtml" />
-    <Content Include="Views\Borrow\Create.cshtml" />
-    <Content Include="Views\Borrow\Edit.cshtml" />
-    <Content Include="Views\BreakDownCost\Create.cshtml" />
-    <Content Include="Views\BreakDownCost\Edit.cshtml" />
-    <Content Include="Views\WageTeachnician\Edit.cshtml" />
-    <Content Include="Views\JobOrder\Create.cshtml" />
-    <Content Include="Views\Employee\Index.cshtml" />
-    <Content Include="Views\Employee\Edit.cshtml" />
+    <Content Include="Views\Products\CreateProducts.cshtml" />
+    <Content Include="Views\Products\EditProducts.cshtml" />
+    <Content Include="Views\JobOrder\EditJobOrder.cshtml" />
+    <Content Include="Views\WageVendor\EditWageVendor.cshtml" />
+    <Content Include="Views\Borrow\CreateBorrow.cshtml" />
+    <Content Include="Views\Borrow\EditBorrow.cshtml" />
+    <Content Include="Views\BDC\CreateBDC.cshtml" />
+    <Content Include="Views\BDC\EditBDC.cshtml" />
+    <Content Include="Views\WageTeachnician\EditWageTeachnician.cshtml" />
+    <Content Include="Views\JobOrder\CreateJobOrder.cshtml" />
+    <Content Include="Views\Technician\IndexTechnician.cshtml" />
+    <Content Include="Views\Technician\EditTechnician.cshtml" />
     <Content Include="Views\Shared\Login.cshtml" />
-    <Content Include="Views\Login\Index.cshtml" />
-    <Content Include="Views\CalendarJob\Index.cshtml" />
-    <Content Include="Views\CalendarManPower\Index.cshtml" />
-    <Content Include="Views\Employee\Expired.cshtml" />
-    <Content Include="Views\Manpower\Index.cshtml" />
-    <Content Include="Views\ExpenseMaster\Index.cshtml" />
-    <Content Include="Views\ExpenseMaster\Create.cshtml" />
-    <Content Include="Views\ExpenseMaster\Edit.cshtml" />
-    <Content Include="Views\IncomeMaster\Index.cshtml" />
-    <Content Include="Views\IncomeMaster\Edit.cshtml" />
-    <Content Include="Views\IncomeMaster\Create.cshtml" />
+    <Content Include="Views\Login\IndexLogin.cshtml" />
+    <Content Include="Views\CalendarJob\IndexCalendarJob.cshtml" />
+    <Content Include="Views\CalendarManPower\IndexCMP.cshtml" />
+    <Content Include="Views\Technician\ExpiredTechnician.cshtml" />
+    <Content Include="Views\Manpower\IndexManpower.cshtml" />
+    <Content Include="Views\ExpenseMaster\IndexExpenseMaster.cshtml" />
+    <Content Include="Views\ExpenseMaster\CreateExpenseMaster.cshtml" />
+    <Content Include="Views\ExpenseMaster\EditExpenseMaster.cshtml" />
+    <Content Include="Views\IncomeMaster\IndexIncomeMaster.cshtml" />
+    <Content Include="Views\IncomeMaster\EditIncomeMaster.cshtml" />
+    <Content Include="Views\IncomeMaster\CreateIncomeMaster.cshtml" />
     <Content Include="Views\WarningSupport\Index.cshtml" />
-    <Content Include="Views\Employee\Create.cshtml" />
+    <Content Include="Views\Technician\CreateTechnician.cshtml" />
+    <Content Include="Views\RptJobOrder\IndexRptJobOrder.cshtml" />
+    <Content Include="Views\RoleMaster\IndexRoleMaster.cshtml" />
+    <Content Include="Views\RoleMaster\EditRoleMaster.cshtml" />
+    <Content Include="Views\Authorization\IndexAuthorization.cshtml" />
+    <Content Include="Views\Authorization\CreateAuthorization.cshtml" />
+    <Content Include="Views\Authorization\EditAuthorization.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\datepicker\images\" />
+    <Folder Include="Content\table\" />
+    <Folder Include="Picture\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\src\scss\slimmenu.scss" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\WageTeachnician\Index.cshtml" />
+    <Content Include="Views\WageTeachnician\IndexWageTeachnician.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\WageVendor\Index.cshtml" />
+    <Content Include="Views\WageVendor\IndexWageVendor.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Products\Index.cshtml" />
+    <Content Include="Views\Products\IndexProducts.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\JobOrder\Index.cshtml" />
+    <Content Include="Views\JobOrder\IndexJobOrder.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\BreakDownCost\Index.cshtml" />
+    <Content Include="Views\BDC\IndexBDC.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Reports\RptJobOrder.rdlc" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -366,7 +476,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>1031</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:1041/</IISUrl>
+          <IISUrl>http://localhost:1042/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
