--- a/Alpha/AlphaMvc/Web.config
+++ b/Alpha/AlphaMvc/Web.config
@@ -6,7 +6,10 @@
 <configuration>
   <connectionStrings>
     <add name="mycon" connectionString="Server=.;database=TestMvc;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="AlphaConnectionString" connectionString="Data Source=mssql-2012.chaiyohosting.com\MSSQLSERVER,1433;Initial Catalog=Alpha;User ID=sa4;Password=weng4525017#" providerName="System.Data.SqlClient" />
+    <!--<add name="AlphaConnectionString" connectionString="Data Source=mssql-2012.chaiyohosting.com\MSSQLSERVER,1433;Initial Catalog=Alpha;User ID=sa4;Password=weng4525017#"
+         providerName="System.Data.SqlClient" />-->
+    <add name="AlphaConnectionString" connectionString="Data Source=192.168.100.17;Initial Catalog=Alpha;User ID=sa4;Password=weng4525017#"
+    providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -72,6 +75,12 @@
     <handlers>
       <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </handlers>
+  <httpProtocol>
+   <customHeaders>
+      <clear />
+      <add name="Access-Control-Allow-Origin" value="*" />
+   </customHeaders>
+</httpProtocol>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
