--- a/AlphaApi/AlphaApi/Web.config
+++ b/AlphaApi/AlphaApi/Web.config
@@ -9,10 +9,15 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-  <!--<add name="mycon" connectionString="Server=.\MSSQLSERVER2;database=Alpha;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="mycon" connectionString="Data Source=mssql-2012.chaiyohosting.com\MSSQLSERVER,1433;Initial Catalog=Alpha;User ID=sa4;Password=weng4525017#" providerName="System.Data.SqlClient"/>
+  <!--<add name="mycon" connectionString="Server=.;database=Alpha;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="mycon" connectionString="Data Source=mssql-2012.chaiyohosting.com\MSSQLSERVER,1433;Initial Catalog=Alpha;User ID=sa4;Password=weng4525017#" 
+         providerName="System.Data.SqlClient"/>-->
+  <add name="mycon" connectionString="Data Source=192.168.100.17;Initial Catalog=Alpha;User ID=sa4;Password=weng4525017#" providerName="System.Data.SqlClient"/>
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="DirectoryPath" value="LDAP://alphagroup.local/CN=Users,DC=alphagroup,DC=local"/>
+    <add key="DirectoryDomain" value="alphagroup.local"/>
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
